# ai-translation-benchmark

./: .env.example  .gitignore  LICENSE  README.md  config.yaml.example
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/api/routes/: __init__.py  health.py  providers.py  translation.py
backend/app/core/: __init__.py  config.py  constants.py  logging.py
backend/app/db/: __init__.py  database.py  models.py  repository.py
backend/app/evaluation/: __init__.py  evaluator.py  scorer.py
backend/app/evaluation/heuristics/: __init__.py  language_detection.py  length_ratio.py  preservation.py  repetition.py
backend/app/evaluation/semantic/: __init__.py  embedding_similarity.py
backend/app/providers/: __init__.py  base.py  deepl_provider.py  factory.py  google_translate_provider.py  local_openai_provider.py  openai_provider.py
backend/app/schemas/: __init__.py  api.py  evaluation.py  provider.py
backend/tests/: conftest.py  test_heuristics.py
docs/: ARCHITECTURE.md  METRICS.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: HistoryPanel.tsx  InputPanel.tsx  ModelCard.tsx  OutputPanel.tsx  RankingSummary.tsx  ScoreBreakdown.tsx  StatisticsSummary.tsx
frontend/src/styles/: index.css
